// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, channel display mode section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={true}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={
          <SettingItemMax
            containerStyle=""
            extraInfo={null}
            infoPosition="bottom"
            inputs={
              Array [
                <fieldset>
                  <legend
                    className="form-legend hidden-label"
                  >
                    <Memo(MemoizedFormattedMessage)
                      defaultMessage="Channel Display"
                      id="user.settings.display.channelDisplayTitle"
                    />
                  </legend>
                  <div
                    className="radio"
                  >
                    <label>
                      <input
                        checked={false}
                        id="channel_display_modeFormatA"
                        name="channel_display_modeFormat"
                        onChange={[Function]}
                        type="radio"
                      />
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Full width"
                        id="user.settings.display.fullScreen"
                      />
                    </label>
                    <br />
                  </div>
                  <div
                    className="radio"
                  >
                    <label>
                      <input
                        checked={false}
                        id="channel_display_modeFormatB"
                        name="channel_display_modeFormat"
                        onChange={[Function]}
                        type="radio"
                      />
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Fixed width, centered"
                        id="user.settings.display.fixedWidthCentered"
                      />
                    </label>
                    <br />
                  </div>
                  <div>
                    <br />
                    <Memo(MemoizedFormattedMessage)
                      defaultMessage="Select the width of the center channel."
                      id="user.settings.display.channeldisplaymode"
                    />
                  </div>
                </fieldset>,
              ]
            }
            saving={false}
            section=""
            submit={[Function]}
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Channel Display"
                id="user.settings.display.channelDisplayTitle"
              />
            }
            updateSection={[Function]}
          />
        }
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, clickToReply section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, clock section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, collapse section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, languages section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, link preview section with EnableLinkPreviews is false 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, link preview section with EnableLinkPreviews is true 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, message display section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, no active section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, teammate name display section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, theme section with EnableThemeSelection is false 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, theme section with EnableThemeSelection is true 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <Connect(ThemeSetting)
        allowCustomThemes={true}
        areAllSectionsInactive={false}
        selected={true}
        setEnforceFocus={[MockFunction]}
        setRequireConfirm={[MockFunction]}
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, timezone section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        infoPosition="bottom"
        max={null}
        saving={false}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should not show last active section 1`] = `
<div
  id="displaySettings"
>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
      id="displaySettingsTitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        containerStyle=""
        infoPosition="bottom"
        max={null}
        saving={false}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;
